--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,3 +1,9 @@
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin-top: 64px;}
 * {
   margin: 0;
   padding: 0;
@@ -233,3 +239,4 @@ body.dark .section ul li {
 body.dark hr {
   border-color: #334155;
 }
+
